# VideoDecode

./: Readme.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shz/videodecode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LiveDecode.cpp  VideoDecode.cpp  com_shz_videodecode_Player.h  native-lib.cpp
app/src/main/java/com/shz/videodecode/: MainActivity.java  Player.java
app/src/main/java/com/shz/videodecode/view/: VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shz/videodecode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
